<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_16"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/fruit_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/add_fruit_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:tint="@color/white"
                app:fabSize="mini"
                app:srcCompat="@android:drawable/ic_input_add" />
        </LinearLayout>

        <View
            android:id="@+id/edit_fruit_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_transparent_40"
            android:visibility="gone" />
    </FrameLayout>
</layout>