...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/add_fruits_action"
                    android:layout_width="@dimen/edit_fragment_image_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:layout_marginRight="@dimen/margin_16"
                    android:src="@drawable/ic_more"
...
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:text="@android:string/cancel"
                        android:textColor="@color/colorAccent" />

                    <Button
                        android:id="@+id/done_add_fruit"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="@dimen/edit_fragment_button_width"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:text="@string/done"
                        android:textColor="@color/colorAccent" />
...
