<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/select_fruit_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/select_fragment_height"
            android:layout_gravity="bottom"
            app:cardElevation="@dimen/card_elevation">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fruit_list_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="@dimen/margin_8" />
        </androidx.cardview.widget.CardView>
    </FrameLayout>
</layout>