...
                android:layout_height="@dimen/fruit_placeholder_size"
                android:src="@drawable/fruit_image_placeholder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fruit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_12"
                android:layout_marginLeft="@dimen/margin_12"
                app:layout_constraintBottom_toBottomOf="@id/fruit_image"
                app:layout_constraintStart_toEndOf="@id/fruit_image"
...
